Fix #468 search results in high contrast mode

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -403,6 +403,7 @@ body .excalidraw {
   --scrollbar-active-thumb-bg: var(--ui3);
   --scrollbar-bg: transparent;
   --scrollbar-thumb-bg: var(--ui1);
+  --search-result-background: var(--bg1);
   --tab-text-color-focused-active: var(--tx1);
   --tab-outline-color: var(--ui1);
   --text-accent-hover: var(--ax2);
