--- a/src/scss/variables/theme.scss
+++ b/src/scss/variables/theme.scss
@@ -75,6 +75,8 @@ body .excalidraw {
 	--scrollbar-bg:                      transparent;
 	--scrollbar-thumb-bg:                var(--ui1);
 
+	--search-result-background:           var(--bg1);
+
 	--tab-text-color-focused-active:     var(--tx1);
 	--tab-outline-color:                 var(--ui1);
 
@@ -94,7 +96,6 @@ body .excalidraw {
 
 	--title-color-inactive:              var(--tx2);
 	--title-color:                       var(--tx1);
-
 
 	--titlebar-background:               var(--bg2);
 	--titlebar-background-focused:       var(--bg2);
